# claude-code-audit

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analyzer-design.md  analyzer-improvements.md  analyzer-issues.md  pattern-detection-research.md  recommendations-design.md  session-analysis-plan.md
docs/archive/: analyzer-design.md  analyzer-improvements.md  analyzer-issues.md  session-analysis-plan.md
src/agent_audit/: __init__.py  cli.py  codex_parser.py  config.py  database.py  debrief.py  models.py  parser.py  toml_renderer.py
src/agent_audit/analyzer/: claude_client.py  recommendations.py  session_analyzer.py
src/agent_audit/prompts/: best_practices_validation.md  global_synthesis.md  session_analysis.md
src/claude_code_archive/: cli.py  database.py  models.py  parser.py  toml_renderer.py
src/claude_code_archive/analyzer/: __init__.py  classifier.py  claude_client.py  renderer.py  session_analyzer.py
src/claude_code_archive/prompts/: __init__.py  classification.md
src/claude_code_audit/: __init__.py  cli.py  config.py  parser.py  toml_renderer.py
src/claude_code_audit/analyzer/: __init__.py  recommendations.py  session_analyzer.py
src/claude_code_audit/prompts/: best_practices_reference.md  recommendation_fix.md
tests/: __init__.py  test_analyzer.py  test_claude_client.py  test_cli.py  test_cli_toml_utils.py  test_codex_parser.py  test_database.py  test_debrief.py  test_integration_pipeline.py  test_parser.py  test_recommendations.py  test_session_analyzer.py  test_toml_renderer.py
