[project]
name = "claude-code-audit"
version = "0.1.0"
description = "Archive Claude Code transcripts in a structured, analyzable format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "claude-agent-sdk>=0.1.12",
]

[project.scripts]
claude-code-audit = "claude_code_audit.cli:main"

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_audit"]
